# CRISPRuno

./: Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/CRISPRuno/: CRISPRunoBatch.py  CRISPRunoCompare.py  CRISPRunoCore.py  cli.py
tests/: test.py
